--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="start">start</string>
     <string name="stop">stop</string>
     <string name="reset">reset</string>
+    <string name="pause">pause</string>
     <string-array name="beerList">
         <item>light</item>
         <item>amber</item>
