2 fragments added, one using fragment container, one using Frame Layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="Welcome_fragment">Welcome Fragment</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="welcome_fragment_2">Welcome Fragment 2</string>
 </resources>
