--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="Welcome_fragment">Welcome Fragment</string>
+    <string name="send">send</string>
 </resources>
