customized toolbar set up

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RevisionProj1</string>
+    <string name="app_name">Chit Chat App</string>
     <string name="enter_soemething">Enter Soemething</string>
     <string name="okButtonText">Ok!!</string>
     <string name="beer_type">Beer Type</string>
