--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="help">Help</string>
+    <string name="home">home</string>
+    <string name="inbox">Inbox</string>
+    <string name="sent_mails">Sent Mails</string>
 </resources>
